# research-compute-fabric

./: .aider.conf.yml  .clinerules  .codeiumignore  .cursorrules  .gitattributes  .gitignore  .gitmodules  .mcp.json  .pre-commit-config.yaml  .sops.yaml  AGENTS.md  ARCHITECTURE.md  Agda_Test.agda  Agda_Test.agdai  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONCEPTS.md  Containerfile  GEMINI.md  GETTING_STARTED.md  LEAD_Q16_16_MIGRATION_GUIDE.md  LEAD_Q16_16_MIGRATION_PLAN.md  LEAD_Q16_16_MIGRATION_PLAN.txt  LEAD_Q16_16_UNIFICATION_SUMMARY.md  MEMORY.md  Modelfile  NOTICE  PROJECT_MAP.md  README.md  THIRD_PARTY_NOTICES.md  TODO_MAP.md  adversarial-review-self-adapting-fabric.md  airtable_compute_substrate_schema.json  airtable_hardware_substrates.csv  airtable_import_guide.md  airtable_integration_patterns.csv  airtable_math_workloads.csv  airtable_optimal_configurations.csv  airtable_performance_metrics.csv  (+16 more)
0-Core-Formalism/rust/ftdi_gimbal/: Cargo.toml
0-Core-Formalism/rust/ftdi_gimbal/src/: main.rs
1-Distributed-Systems/ene/: Cargo.toml  debug_credentials.py  direct_swarm_probe.py  ene_distributed_node.py  ingest_keys_to_ene.py  migrate_credentials.py  propagate_ssh_keys.py
1-Distributed-Systems/ene/src/: config.rs  credentials.rs  gossip.rs  health.rs  lib.rs  mesh.rs  node.rs  replication.rs  swarm.rs
1-Distributed-Systems/waveprobe/: Cargo.toml  ene_distributed_node_adapter.py  otom_v4_adapter.py  quantum_manifold_geometry_adapter.py  resonance_adapter.py  wsm_wr_egs_wc_adapter.py
1-Distributed-Systems/waveprobe/src/: ene_adapter.rs  lib.rs  otom_adapter.rs
2-Search-Space/rust/crates/angrysphinx-gates/: Cargo.toml
2-Search-Space/rust/crates/famm-receipts/: Cargo.toml
4-Infrastructure/infra/embedded_surface/rs-surface/: Cargo.toml
4-Infrastructure/infra/ene-rds/: Cargo.toml  README.md
4-Infrastructure/infra/ene-rds/systemd/: ene-api-wrapper.sh  ene-api.service
4-Infrastructure/infra/ene-session-sync/: Cargo.toml  README.md  bridge_wrapper.py
4-Infrastructure/infra/ene-session-sync/sql/: ene_chat_schema.sql
4-Infrastructure/infra/ene-session-sync/src/: bridge.rs  compression.rs  credential.rs  deepseek_adapter.rs  embed.rs  ene_cloud_credential_manager.rs  ene_core.rs  enhanced_swarm.rs  fractal_fold.rs  gemma_integration.rs  hyperbolic_encoding.rs  knowledge_ingestion.rs  main.rs  manifold_perception.rs  math.rs  meta_autotype.rs  misc.rs  models.rs  normalize.rs  s3c.rs  s3c_lean_review.rs  search_adapter.rs  sink.rs  source.rs  swarm.rs  topology.rs  wiki.rs
4-Infrastructure/infra/ene-session-sync/systemd/: ene-session-sync.service  ene-session-sync.timer
4-Infrastructure/rds_probe/: Cargo.toml
4-Infrastructure/rds_probe/src/: commands.rs  db.rs  main.rs  models.rs
4-Infrastructure/rust-conversions/: Cargo.toml
4-Infrastructure/rust-conversions/nodupe-core/: Cargo.toml
4-Infrastructure/rust-conversions/nodupe-core/src/: errors.rs  limits.rs  version.rs
4-Infrastructure/shim/authentik_agent_manager/: Cargo.toml
4-Infrastructure/shim/authentik_agent_manager/src/: authentik.rs  dag.rs  lib.rs  main.rs  receipt.rs
4-Infrastructure/shim/ffmpeg-plugins/: Cargo.toml
4-Infrastructure/shim/ffmpeg-plugins/s3c-tool/: Cargo.toml
4-Infrastructure/shim/ffmpeg-plugins/src/: gpu.rs  lib.rs
4-Infrastructure/shim/lake_compile_bridge/: Cargo.toml
4-Infrastructure/shim/lake_compile_bridge/src/: gpu.rs  main.rs  q02_dispatch.rs
5-Applications/linear-native-tauri/: Cargo.toml  README.md  build-and-install.sh  tauri.conf.json
5-Applications/linear-native-tauri/src/: main.rs
5-Applications/nodupe/: .gitignore  .megalinter.yml  .semgrep.yml  README.md  package-lock.json  package.json  pyproject.toml  server.js
5-Applications/nodupe/.github/: auto-merge-config.json  dependabot.yml  settings.yml
5-Applications/nodupe/.github/workflows/: README.md  ci-cd.yml  ci-comprehensive.yml  deployment.yml  pr-validation.yml  sbom.yml  scorecard.yml  slsa-attestations.yml  trufflehog.yml  wiki-lint.yml
5-Applications/nodupe/.github/workflows-disabled/: code-quality.yml.disabled  python-testing.yml.disabled
5-Applications/nodupe/.integrity/: SHA512SUMS.txt  manifest.json
5-Applications/nodupe/connectors/ene/: ene_connector_router.js
5-Applications/nodupe/connectors/topological-engine/: TOPOLOGICAL_ENGINE_PRIVATE_SETUP.md  (+1 more)
5-Applications/nodupe/docs/: BACKUP_RECOVERY_GUIDE.md  BACKUP_RECOVERY_GUIDE.txt  CONSOLIDATION_REPORT_2026_02_22.md  CONSOLIDATION_SUMMARY.md  COVERAGE_PLAN_EXECUTIVE_SUMMARY.md  COVERAGE_TRACKING.md  CURRENT_STATUS_2026_02_22.md  Documentation_Index.md  FINAL_COMPLETION_REPORT.md  LOW_COVERAGE_SPRINT_SUMMARY_2026_02_22.md  PARALLEL_TESTING_GUIDE.md  RISK_ASSESSMENT.md  SESSION_REPORT_2026_02_22.md  TESTING_INDEX.md  VERIFY_TOOL_COMPLETION.md  WEEKLY_CHECKIN_TEMPLATE.md
5-Applications/nodupe/nodupe/: __init__.py
5-Applications/nodupe/pipeline/: .gitignore  pyproject.toml
5-Applications/nodupe/reports/: run_health_audit.py
5-Applications/nodupe/tests/: __init__.py  conftest.py  ipc_socket_utils.py  run_tests.py  test_100_coverage_final.py  test_coverage_final_push.py  test_coverage_gaps.py  test_coverage_gaps_final.py  test_hash_autotune.py  test_ipc_socket.py  test_medium_priority_100.py  test_verify_plugin.py  verify_plugin_compatibility.py
5-Applications/nodupe/wiki/: Changelog.md  Home.md
5-Applications/parquet_compressor/: Cargo.toml
5-Applications/parquet_compressor/src/: compressor.rs  gpu.rs  main.rs  math_self_discover.rs  parquet_handler.rs
5-Applications/teleport-kanban/: 99-msr.rules  Cargo.toml  PROJECT_SUMMARY.md  README.md  README_THERMODYNAMIC.md  deploy.sh  soliton-governor.service
5-Applications/teleport-kanban/docs/: Entrainment_Definition.md  Troubleshooting.md  User_Entrainment_Safety_Protocol.md
5-Applications/teleport-kanban/src/: branch_prediction.rs  interface.rs  kanban.rs  lib.rs  main.rs  moe.rs  safety.rs  teleport.rs  thermodynamic.rs  tick_cpu.rs
codebase-memory-receipt-2026-05-13/: Cargo.toml  RECEIPT.md  hashes.json  hermes_math_audit_manifest.json  upload_manifest.json
(+8483 files in other folders)
