[package]
name = "ene-distributed-node"
version = "0.1.0"
edition = "2021"
authors = ["Research Stack <dev@research-stack.local>"]
description = "Distributed Self-Replicating ENE Node — Rust rewrite of legacy Python"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# Cryptographic dependencies for credential management
sha2 = "0.10"
aes-gcm = "0.10"
rand = "0.8"

# Networking
reqwest = { version = "0.11", features = ["json"] }

[dev-dependencies]
tokio-test = "0.4"
