[package]
name = "rds_probe"
version = "0.1.0"
edition = "2021"
description = "RDS ENE database inspection tool"
license = "MIT"
authors = ["Research Stack"]

[dependencies]
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "json", "uuid"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
sha2 = "0.10"
hex = "0.4"

[profile.release]
opt-level = 3
lto = true
