[workspace]
resolver = "2"
members = [
    "nodupe-core",
]

[workspace.package]
version = "1.0.0"
edition = "2024"
license = "MIT"
rust-version = "1.86.0"

[workspace.lints.rust]
missing_docs = "warn"
unreachable_pub = "warn"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = { level = "allow", priority = 1 }
implicit_clone = "warn"
redundant_clone = "warn"
redundant_type_annotations = "warn"
use_self = "warn"
missing_assert_message = "warn"
cast_possible_truncation = "warn"
cast_sign_loss = "warn"
cast_precision_loss = "warn"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
