[package]
name = "linear-native-tauri"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["full"] }
compression-core = { path = "../compression-core" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
