[package]
name = "nodupe-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "NoDupeLabs core library — configuration, version, errors, and resource limits"

[lints]
workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
