[workspace]
members = [".", "s3c-tool"]

[package]
name = "ffmpeg-plugins"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib", "staticlib"]

[dependencies]
bytemuck = { version = "1", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wgpu = { version = "29", optional = true }
pollster = { version = "0.4", optional = true }

[features]
default = ["gpu"]
gpu = ["wgpu", "pollster"]

[profile.release]
opt-level = "z"
lto = true
strip = true
