[package]
name = "lake_compile_bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = "0.19"
bytemuck = { version = "1.14", features = ["derive"] }
pollster = "0.3"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
chrono = "0.4"
sha2 = "0.10"
hex = "0.4"
