[package]
name = "angrysphinx-gates"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Rust ports of first-party AngrySphinx gate prototypes"
license.workspace = true

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "dynamic-lut-slotter"
path = "src/bin/dynamic_lut_slotter.rs"
