[package]
name = "famm-receipts"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Rust ports of first-party FAMM receipt runners"
license.workspace = true

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"

[[bin]]
name = "sidon-famm-map"
path = "src/bin/sidon_famm_map.rs"

[[bin]]
name = "anti-famm-adversary"
path = "src/bin/anti_famm_adversary.rs"
