[package]
name = "rs-surface"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false
description = "Embedded node surface daemon — Rust port of embedded_surface/server.py"

[[bin]]
name = "rs-surface"
path = "src/main.rs"

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["ws", "macros"] }
base64 = "0.22"
flate2 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = 3
lto = true
strip = true
