[package]
name = "s3c-tool"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "s3c-tool"
path = "src/main.rs"

[dependencies]
ffmpeg-plugins = { path = "..", features = ["gpu"] }
bytemuck = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
pollster = "0.4"
