[package]
name = "ene-node"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
hex = "0.4"
base64 = "0.22"
hmac = "0.12"
rand = "0.8"
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dependencies.rusqlite]
version = "0.32"
features = ["bundled", "chrono"]
