[package]
name = "ene-node"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
ene-common = { path = "../ene-common" }
hex = "0.4"
hmac = "0.12"
sha2 = "0.10"
rand = "0.8"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dependencies.rusqlite]
version = "0.32"
features = ["bundled", "chrono"]
