[package]
name = "ene-rds-core"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-postgres = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
