[package]
name = "ene-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
dirs = "5"
hex = "0.4"
tempfile = "3"
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
