[package]
name = "ene-sync"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
dirs = "5"
ene-rds-chat = { path = "../ene-rds-chat" }
ene-rds-core = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dependencies.rusqlite]
version = "0.32"
features = ["bundled", "chrono"]
